# MCPCalculator

./: .gitignore  ARCHITECTURE.md  COMPARISON_GUIDE.md  DISTRIBUTION.md  DUAL_LANGUAGE_ARCHITECTURE.md  DUAL_LANGUAGE_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_PYTHON.md  package.json  pyproject.toml  requirements.txt  test_python.py  tsconfig.json
src/: bc-process-pool.ts  bc-process.ts  index.ts  input-validator.ts
src/python/bc_calculator_mcp/: __init__.py  __main__.py  bc_process.py  bc_process_pool.py  input_validator.py  types.py
src/ts/: types.ts
